# cppm-diplom

./: CMakeLists.txt
_dev/: quest.txt
lib/means_transport/: CMakeLists.txt  transport.cpp  transport.h
lib/means_transport/air/: airtransport.cpp  airtransport.h  broom.cpp  broom.h  eagle.cpp  eagle.h  magiccarpet.cpp  magiccarpet.h
lib/means_transport/grount/: camel.cpp  camel.h  camelfast.cpp  camelfast.h  centaur.cpp  centaur.h  grounttransport.cpp  grounttransport.h  vehicleboots.cpp  vehicleboots.h
src/: main.cpp  paramdata.cpp  paramdata.h
